--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,3 +12,10 @@ body {
     background-color: white; 
     color: #333;
   }
+
+.sriracha-regular {
+    font-family: "Sriracha", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
