--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,13 +3,17 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh; 
+    background-image: url("./assets/travelWebWallpaper.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   
 
 #root {
     width: 100%;
     height: 100%; 
-    background-color: white; 
     color: #333;
   }
 
